--- a/ModelsApi/ModelManager/package.json
+++ b/ModelsApi/ModelManager/package.json
@@ -12,7 +12,8 @@
     "name": ""
   },
   "dependencies": {
-    "vue": "2.5.17"
+    "vue": "2.5.17",
+    "vue-material": "^1.0.0-beta-13"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "3.0.4",
