--- a/ModelsApi/ModelManager/package.json
+++ b/ModelsApi/ModelManager/package.json
@@ -13,7 +13,8 @@
   },
   "dependencies": {
     "vue": "2.5.17",
-    "vue-material": "^1.0.0-beta-13"
+    "vue-material": "^1.0.0-beta-13",
+    "vue-router": "^3.1.6"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "3.0.4",
